# game-install-finder

./: .envrc  .gitignore  .protocol  README.md  pyproject.toml  run.sh
.github/workflows/: workflow.yml
docs/agent_conversations/: 2026-05-07_add_cli_entrypoint.json  2026-05-07_cleanup_protocol_discrepancies.json  2026-05-07_rename_game_install_finder.json  2026-05-07_update_readme.json  2026-05-08_heroic_lutris_search.json  2026-05-09_fix_heroic_flatpak_discovery.json  2026-05-10_add_version_flag.json  2026-05-10_fix_heroic_launcher_and_gog_discovery.json  2026-06-16_add_cutoff_score_flag.json  2026-06-16_add_find_command.json  2026-06-18_add_execution_path_tests.json  2026-06-18_fix_execution_paths.json
docs/plans/: add_cli_entrypoint.md  add_cutoff_score_flag.md  add_find_command.md  add_version_flag.md  cleanup_protocol_discrepancies.md  fix_heroic_flatpak_discovery.md  fix_heroic_launcher_and_gog_discovery.md  lutris_heroic_search.md  rename_game_install_finder.md  update_readme.md
src/game_install_finder/: _version.py  cli.py
src/game_path_finder/: _version.py  game_path_finder.py
tests/: test___init__.py  test_cli.py  test_execution_paths.py  test_game_install_finder.py  test_game_path_finder.py  test_protocol.py
