[project]
name = "game-install-finder"
dynamic = ["version"]
description = "Find local game install paths across PC game launchers. Currently supports Steam."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "David Beall", email = "6121439+beallio@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "cli",
    "games",
    "heroic",
    "launcher",
    "lutris",
    "paths",
    "steam",
]
dependencies = [
    "vdf>=3.4",
]

[project.scripts]
game-install-finder = "game_install_finder.cli:main"

[project.urls]
Homepage = "https://github.com/beallio/game-install-finder"
Repository = "https://github.com/beallio/game-install-finder"
Issues = "https://github.com/beallio/game-install-finder/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/game_install_finder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/game_install_finder",
    "README.md",
    "LICENSE",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "/tmp/game-install-finder/.uv_cache"

[tool.ruff]
line-length = 100
cache-dir = "/tmp/game-install-finder/.ruff_cache"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term"
cache_dir = "/tmp/game-install-finder/.pytest_cache"
pythonpath = ["src"]

[tool.coverage.run]
data_file = "/tmp/game-install-finder/.coverage"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.24",
]
